Fix spacing

--- a/css/index.css
+++ b/css/index.css
@@ -304,6 +304,7 @@ nav div.text-links a {
   margin: 20px 0 20px 0;
   border-radius: 10px;
   border: 2px solid black;
+  font-weight: 500;
 }
 
 .bottom-content {
@@ -318,6 +319,15 @@ nav div.text-links a {
 
 .bottom-content .text-container:last-child {
   padding-right: 0;
+}
+
+.bottom-content.about {
+  margin-top: 50px;
+  margin-bottom: 41px;
+}
+
+.bottom-content.about .text-container {
+  padding: 0 4px;
 }
 
 footer {
